--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                                 </svg>
 
                                 <h3 class="display-novedades pb-md-4">
-                                    Entérate de las ultimas 
+                                    Entérate de las últimas 
                                     <mark class="mark-yellow">novedades</mark> y tendencias en tecnología
                                 </h3>
                             </div>
@@ -223,7 +223,7 @@
             <div class="row">
                 <div class="col-md-8 align-self-center">
                     <h3 data-aos="fade-right" data-aos-delay="300" data-aos-once="true" class="fw-bold mb-4 text-white"><span style="color: #67cfe9;">8 Bits Interactive</span> es una empresa única de juegos retro, dedicada a recuperar los buenos tiempos de los  <span style="text-decoration: underline #67cfe9;">videojuegos</span> y la cultura <mark style="background: #67cfe9; line-height:2;">gaming.</mark></h3>
-                    <h4 data-aos="fade-right" data-aos-delay="600" data-aos-once="true"  class="text-white">Desde PacMan hasta el simulador del juego clásico Snake y una pantalla de 120 pulgadas con Mando y Consola – lo tienen todo.</h4>
+                    <h4 data-aos="fade-right" data-aos-delay="600" data-aos-once="true"  class="text-white">Desde Car Crash hasta el simulador del juego clásico Brick Breaker y una pantalla de 120 pulgadas con Mando y Consola – lo tienen todo.</h4>
                     <br>
                     <a target="_blank" style="color: #67cfe9;" href="https://bittoqubits.github.io/arcade-juegos-informatica/">
                         <svg xmlns="http://www.w3.org/2000/svg" class="octicon arrow-symbol-mktg" width="16" height="16" viewBox="0 0 16 16" fill="none"><path fill="currentColor" d="M7.28033 3.21967C6.98744 2.92678 6.51256 2.92678 6.21967 3.21967C5.92678 3.51256 5.92678 3.98744 6.21967 4.28033L7.28033 3.21967ZM11 8L11.5303 8.53033C11.8232 8.23744 11.8232 7.76256 11.5303 7.46967L11 8ZM6.21967 11.7197C5.92678 12.0126 5.92678 12.4874 6.21967 12.7803C6.51256 13.0732 6.98744 13.0732 7.28033 12.7803L6.21967 11.7197ZM6.21967 4.28033L10.4697 8.53033L11.5303 7.46967L7.28033 3.21967L6.21967 4.28033ZM10.4697 7.46967L6.21967 11.7197L7.28033 12.7803L11.5303 8.53033L10.4697 7.46967Z"></path><path class="octicon-chevrow-stem" stroke="currentColor" d="M1.75 8H11" stroke-width="1.5" stroke-linecap="round"></path></svg>
