--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap">
     <link rel="stylesheet" href="assets/css/styles.min.css">
-    <link rel="stylesheet" href="assets/css/aos.min.css">>
+    <link rel="stylesheet" href="assets/css/aos.min.css">
     <script src="https://kit.fontawesome.com/4ab648b0ea.js" crossorigin="anonymous"></script>
 </head>
 
