Cambios durante la feria

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap">
     <link rel="stylesheet" href="assets/css/styles.min.css">
-    <link rel="stylesheet" href="assets/css/aos.min.css">
+    <link rel="stylesheet" href="assets/css/aos.min.css">>
     <script src="https://kit.fontawesome.com/4ab648b0ea.js" crossorigin="anonymous"></script>
 </head>
 
@@ -36,16 +36,7 @@
                                 <span class="fw-normal">COPPHU Innovation </span>
                             </h1>
 
-                            <p class="fs-5 text-white-50" data-aos="fade-down" data-aos-delay="1200" data-aos-once="true">
-                                Un viaje a través de la tecnología
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
-        </div>
-
-        <span   class="position-absolute top-50 start-50 translate-middle z-index-n1 d-none d-md-block mt-4" 
+                                    <span   class="position-absolute top-50 start-50 translate-middle z-index-n1 d-none d-md-block mt-4" 
                 data-aos="fade-in" 
                 data-aos-delay="1500" 
                 data-aos-once="true">
@@ -57,6 +48,15 @@
                     </path>
                 </svg>
         </span>
+
+                            <p class="fs-5 pt-5 text-white-50" data-aos="fade-down" data-aos-delay="1200" data-aos-once="true">
+                                Un viaje a través de la tecnología
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+        </div>
 
     </header>
     
