Cambio en la localización

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                                 Buenas noticias: ¡Estas <span style="color: #f5d202;">invitado</span>!
                             </h2>
 
-                            <p class="mb-4">La feria empezará el Lunes 12 de diciembre. <br />Nos vemos a las 10:00 AM en el recinto de la COPPHU.<br /><br />Localización: <br /><span style="background-color: transparent;">Sala Max Henríques Ureña. Edificio 4. <br /> UNPHU</span></p> 
+                            <p class="mb-4">La feria empezará el Lunes 12 de diciembre. <br />Nos vemos a las 10:00 AM en el recinto de la UNPHU.<br /><br />Localización: <br /><span style="background-color: transparent;">Sala Max Henríques Ureña. Edificio 4. <br /> UNPHU</span></p> 
                         </div>
                     </div>
 
